Docker; add somes values to a better organisation of docker service Add a colored prompt, with color dependant of 'production' status, and service name Add nano and htop tools by default into server/client image

--- a/docker/.env-default
+++ b/docker/.env-default
@@ -21,6 +21,11 @@ VOLUME_NFS=$VOLUME_PATH/mountpoint_nfs
 maildomain=vidjil.org
 smtp_user=vidjil:smtp_pass
 
+## Docker names, spaces, prompt
+# Use to give a red color to prompt to make a warning
+PRODUCTION=false
+# Use as prefix for service name
+SERVICE_PREFIX_NAME=dev
 
 #############################
 # Don't change these values
