.gitlab-ci; replace python image from 2.7slim to slim (3.11 inside at the moment of commit)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -239,7 +239,7 @@ code_quality_custom:
 # Server
 
 test_server_unit:
-    image: python:2.7-slim
+    image: python:slim
     stage: test_unit
     <<: *before_script_global_docker
     script:
