--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -244,7 +244,7 @@ test_server_unit:
     <<: *before_script_global_docker
     script:
       - apt-get update && apt-get upgrade -y && apt-get install -y --no-install-recommends gcc libldap2-dev libssl-dev libsasl2-dev python3-ijson libyajl2 python3-cffi wget unzip procps
-      - pip install -r requirements.txt
+      - pip3 install -r requirements.txt
       - make -C server/py4web install_py4web
       - make -C server launch_fuse_server
       - make unit_server
