--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -43,6 +43,7 @@ services:
             - mysql
         volumes:
           - ./vidjil-server/scripts:/entrypoints
+          - ./vidjil-server/conf/defs.py:/usr/share/vidjil/server/py4web/apps/vidjil/defs.py
           - $VOLUME_PATH/results:/mnt/result/results
           - $VOLUME_PATH/tmp:/mnt/result/tmp
           - $VOLUME_PATH/uploads:/mnt/upload/uploads
