docker-compose; Allow to change the number of uwsgi threads

--- a/docker/.env-default
+++ b/docker/.env-default
@@ -27,6 +27,10 @@ PRODUCTION=false
 # Use as prefix for service name
 SERVICE_PREFIX_NAME=dev
 
+
+# Number of uwsgi threads to use (by default 6 if not declared)
+# If you make some work on code, you can change it to 1 to get all threads similar when you relaunch application 
+# UWSGI_POOL=1
 #############################
 # Don't change these values
 MYSQL_DATABASE=vidjil
