.gitlab-ci; add a print of docker-compose config interpretation Allow to know effective parameters of docker-compose and .env files

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -243,7 +243,7 @@ test_server_unit:
     stage: test_unit
     <<: *before_script_global_docker
     script:
-      - apt-get update && apt-get upgrade -y && apt-get install -y --no-install-recommends gcc libldap2-dev libssl-dev libsasl2-dev python3-ijson libyajl2 python3-cffi wget unzip procps
+      - apt-get update && apt-get upgrade -y && apt-get install -y --no-install-recommends gcc libldap2-dev libssl-dev libsasl2-dev python3-ijson libyajl2 python3-cffi wget unzip procps libffi-dev
       - pip3 install -r requirements.txt
       - make -C server/py4web install_py4web
       - make -C server launch_fuse_server
@@ -376,7 +376,16 @@ deploy_review_server:
     - sed -i -r "s/py4web_admin_password/$REVIEW_SERVER_ADMIN_PASSWORD/" .env
     - cd ..
     - rsync -av --exclude .git . $REVIEW_SERVER:$REVIEW_SERVER_PATH_SERVER$CI_BUILD_REF_SLUG || $(case "$?" in 0|23) exit 0 ;; *) exit $?; esac)
-    - ssh $REVIEW_SERVER "cd $REVIEW_SERVER_PATH_SERVER; ./install_certs.sh ${CI_BUILD_REF_SLUG}; cd ${CI_BUILD_REF_SLUG}/docker_${CI_BUILD_REF_SLUG}; mkdir -p postfix/ssl; docker-compose up -d mysql fuse uwsgi nginx workers; sleep 20s; docker-compose exec -T uwsgi bash -c 'cd /usr/share/vidjil/server/py4web/apps/vidjil/scripts; /usr/local/bin/gosu 1005 bash launch_python_script.sh load-sql.py -n /usr/share/vidjil/docker/ci/ci.sql'"
+    - 'ssh $REVIEW_SERVER "cd $REVIEW_SERVER_PATH_SERVER;
+        ./install_certs.sh ${CI_BUILD_REF_SLUG}; 
+        cd ${CI_BUILD_REF_SLUG}/docker_${CI_BUILD_REF_SLUG}; 
+        mkdir -p postfix/ssl; 
+        cat docker-compose.yml; 
+        ls; 
+        docker-compose config; 
+        docker-compose up -d mysql fuse uwsgi nginx workers; 
+        sleep 20s; 
+        docker-compose exec -T uwsgi bash -c ''cd /usr/share/vidjil/server/py4web/apps/vidjil/scripts; /usr/local/bin/gosu 1005 bash launch_python_script.sh load-sql.py -n /usr/share/vidjil/docker/ci/ci.sql''"'
   environment:
     name: review_server/$CI_BUILD_REF_NAME
     url: http://$CI_BUILD_REF_SLUG.server.ci.vidjil.org/
