--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -385,7 +385,7 @@ deploy_review_server:
         docker-compose config; 
         docker-compose up -d mysql fuse uwsgi nginx workers celery flowers; 
         sleep 20s; 
-        docker-compose exec -T uwsgi bash -c ''pip show py4web; cd /usr/share/vidjil/server/py4web/apps/vidjil/scripts; bash launch_python_script.sh load-sql.py -n /usr/share/vidjil/docker/ci/ci.sql''"'
+        docker-compose exec -T uwsgi bash -c ''cd /usr/share/vidjil/server/py4web/apps/vidjil/scripts; python3 load-sql.py -i /usr/share/vidjil/docker/ci/ci.sql''"'
   environment:
     name: review_server/$CI_BUILD_REF_NAME
     url: http://$CI_BUILD_REF_SLUG.server.ci.vidjil.org/
