--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -264,13 +264,14 @@ test_server_unit:
 
 .setup_docker_server:
     # Build specific version of docker images
-    - docker build --no-cache --build-arg git_branch=$CI_COMMIT_REF_NAME --build-arg build_env=TEST -t "vidjil/server:test" docker/vidjil-server
-    - docker build --no-cache --build-arg git_branch=$CI_COMMIT_REF_NAME --build-arg build_env=TEST -t "vidjil/client:test" docker/vidjil-client
+    # - docker build --no-cache --build-arg git_branch=$CI_COMMIT_REF_NAME --build-arg build_env=TEST -t "vidjil/server:test" docker/vidjil-server
+    # - docker build --no-cache --build-arg git_branch=$CI_COMMIT_REF_NAME --build-arg build_env=TEST -t "vidjil/client:test" docker/vidjil-client
+    - mv ./docker/docker-compose-ci.yml ./docker/docker-compose.override.yml
     # Replace path for some volumes
-    - sed -i '/\:\/etc\/nginx\/ssl/d' ./docker/docker-compose.yml
-    - sed -i '/\/var\/lib\/mysql/d' ./docker/docker-compose.yml
-    - echo -e "volumes:\n    databases:" >> ./docker/docker-compose.yml
-    - sed -i 's/\:latest/\:test/g' ./docker/docker-compose.yml
+    # - sed -i '/\:\/etc\/nginx\/ssl/d' ./docker/docker-compose.yml
+    # - sed -i '/\/var\/lib\/mysql/d' ./docker/docker-compose.yml
+    # - echo -e "volumes:\n    databases:" >> ./docker/docker-compose.yml
+    # - sed -i 's/\:latest/\:test/g' ./docker/docker-compose.yml
     # Use http version of config
     - cd docker/vidjil-server/conf/ && mv defs.py defs_https.py && mv defs_http.py defs.py && cd ../../..
     - make germline && cp browser/js/germline.js docker/vidjil-client/conf
