--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,7 @@ vidjil-algo
 
 server/web2py/gluon/packages/dal/
 
+cypress/
 cypress/reports
 cypress/screenshots
 cypress/videos
@@ -126,3 +127,5 @@ docker/vidjil-server2/vidjil/
 browser/js/germline.js
 *.swp
 cypress
+browser/js/git-sha1.js
+firefox/
