Docker cypress; add a lib to read XML This lib allow to read cypress report to make a rename of report that have for initial name a hash value. Now, report have the name of the testing script, allowing to easily find corresponding result Lib install is present in Dockerfile AND in cypress_script. After regenerate cypress image, install in cypress script should be deleted

--- a/docker/ci/Dockerfile
+++ b/docker/ci/Dockerfile
@@ -17,7 +17,7 @@ COPY  cypress_script.bash script.bash
 ### Update and install ressources
 ##################################
 ENV DEBIAN_FRONTEND="noninteractive" TZ="Europe/Paris"
-RUN apt-get update && apt-get install --no-install-recommends --no-install-suggests -y -q npm libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb wget bzip2 tar unzip nano curl ca-certificates make python python3 python2.7 &&\
+RUN apt-get update && apt-get install --no-install-recommends --no-install-suggests -y -q npm libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb wget bzip2 tar unzip nano curl ca-certificates make python python3 python2.7 libxml2-utils &&\
  apt-get -y -q autoremove &&\
  wget -qO- https://deb.nodesource.com/setup_14.x | bash - &&\
  apt install -y nodejs &&\
