--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -263,30 +263,34 @@ test_server_unit:
     extends:
       - .need_for_quick_test
 
+
 .setup_docker_server:
     # Build specific version of docker images
-    # - docker build --no-cache --build-arg git_branch=$CI_COMMIT_REF_NAME --build-arg build_env=TEST -t "vidjil/server:test" docker/vidjil-server
-    # - docker build --no-cache --build-arg git_branch=$CI_COMMIT_REF_NAME --build-arg build_env=TEST -t "vidjil/client:test" docker/vidjil-client
-    - mv ./docker/docker-compose-ci.yml ./docker/docker-compose.override.yml
+    - echo "CI_COMMIT_REF_NAME - $CI_COMMIT_REF_NAME"
+    ### Build specific version of docker-compose files
+    - docker build --no-cache --build-arg git_branch=$CI_COMMIT_REF_NAME --build-arg build_env=TEST -t "vidjil/server:test" docker/vidjil-server
+    - docker build --no-cache --build-arg git_branch=$CI_COMMIT_REF_NAME --build-arg build_env=TEST -t "vidjil/client:test" docker/vidjil-client
+    - sed -i '/\:\/etc\/nginx\/ssl/d' ./docker/docker-compose.yml
+    - sed -i '/\/var\/lib\/mysql/d' ./docker/docker-compose.yml 
+    - echo -e "volumes:\n    databases:" >> docker/docker-compose.yml
+    - sed -i 's/\:latest/\:test/g' ./docker/docker-compose.yml
+
     # Replace path for some volumes
-    # - sed -i '/\:\/etc\/nginx\/ssl/d' ./docker/docker-compose.yml
-    # - sed -i '/\/var\/lib\/mysql/d' ./docker/docker-compose.yml
-    # - echo -e "volumes:\n    databases:" >> ./docker/docker-compose.yml
-    # - sed -i 's/\:latest/\:test/g' ./docker/docker-compose.yml
     # Use http version of config
     - cd docker/vidjil-server/conf/ && mv defs.py defs_https.py && mv defs_http.py defs.py && cd ../../..
     - make germline && cp browser/js/germline.js docker/vidjil-client/conf
     - mkdir -p docker/postfix/ssl
+    - sed -i "s/^\(FILE_SOURCE .*\)/FILE_SOURCE = '\/usr\/share\/vidjil\/demo'/" docker/vidjil-server/conf/defs.py
 
     # Up py4web
-    - cp browser/js/conf.js.sample browser/js/conf.js
-    - 'sed -i "s|\"proxy\": \"https://db.vidjil.org/proxy/\"|\"proxy\": \"https://localhost/proxy/\"|g" browser/js/conf.js'
-    - 'sed -i "s|\"db_address\" : \"https://db.vidjil.org/vidjil/\"|\"db_address\" : \"https://localhost/vidjil/\"|g" browser/js/conf.js'
     - cd docker
-    - mkdir volumes
-    - docker-compose -f docker-compose.yml up -d mysql
-    - docker-compose -f docker-compose.yml down ## restart for write right error on DB
-    - docker-compose -f docker-compose.yml up -d
+    - cp .env-default .env
+    - echo "UWSGI_POOL=1" >> .env
+    - docker-compose config
+    - mkdir -p volumes
+    - docker-compose up -d mysql
+    - docker-compose down ## restart for write right error on DB
+    - docker-compose up -d mysql uwsgi
     # Set rights
     - docker exec docker_uwsgi_1 mkdir -p /usr/share/vidjil/server/py4web/apps/vidjil/errors/
     - docker exec docker_mysql_1 chmod 0777 /var/lib/mysql/vidjil -R
@@ -296,20 +300,23 @@ test_server_unit:
     - docker exec docker_uwsgi_1 chmod 0777 /mnt/upload/uploads   -R
     - docker exec docker_uwsgi_1 chmod 0777 /usr/share/tools      -R
 
+    - chmod 777 -R volumes/vidjil/
+
+
     # Start docker images
-    - cd docker && docker-compose up -d && cd ..
+    - docker-compose restart uwsgi
+    - sleep 60 && docker ps
+    - docker-compose up -d
     # Show some information on current states of docker services
-    - sleep 10 && docker ps
-    - pwd
-    - ls
+    - docker ps
 
     # Execute a script of init database and moke (fake ?) data inside; to be launch before executing tests
     - docker exec docker_uwsgi_1 bash -c "cd /usr/share/vidjil/server/py4web/apps/vidjil/tests/functional/ && python3 init_test_db.py"
     # Change File source definition in defs.py file 
-    - docker exec docker_uwsgi_1 sed -i "s/^\(FILE_SOURCE .*\)/FILE_SOURCE = '\/usr\/share\/vidjil\/demo'/" /usr/share/vidjil/server/py4web/apps/vidjil/defs.py
     - docker exec docker_nginx_1 make -C /usr/share/vidjil browser # init browser content
-  
-      
+    - cd .. # Go to root git directory
+
+
 .test_server_base_dind:
   image:
     name: pandoc/core:latest
@@ -326,7 +333,7 @@ test_server_unit:
     - docker ps
     - mkdir -p logs/after; for service in mysql fuse uwsgi workers celery flower nginx; do docker logs docker_${service}_1  > logs/after/${service}.log 2>&1; done
     - cd docker && docker-compose down -v
-    - docker rmi "vidjil/server:test" "vidjil/client:test" reporter:test
+    - docker rmi "vidjil/server:test" "vidjil/client:test"
   only:
     - /^feature-.*s.*\/.*$/
     - /^hotfix-.*s.*\/.*$/
